# recover_yeast

./: .gitignore  timelapse_launcher.py
napari-mmc-tools/: README.md  napari_mmc_tools_plugin_complet_package.py  pyproject.toml
napari-mmc-tools/src/napari_mmc_tools/: __init__.py  _shared.py  napari.yaml  positions_editor.py  tl_launcher.py
napari-mmc-tools/src/napari_mmc_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tmp/: QtPy-2.4.3-py3-none-any.whl  app_model-0.4.0-py3-none-any.whl  cachey-0.2.1-py3-none-any.whl  cmap-0.6.2-py3-none-any.whl  crc32c-2.7.1.post0-cp312-cp312-win_amd64.whl  donfig-0.8.1.post1-py3-none-any.whl  fonticon_materialdesignicons6-6.9.96-py3-none-any.whl  in_n_out-0.2.1-py3-none-any.whl  kiwisolver-1.4.9-cp312-cp312-win_amd64.whl  magicgui-0.10.1-py3-none-any.whl  ml_dtypes-0.5.3-cp312-cp312-win_amd64.whl  napari-0.6.6-py3-none-any.whl  napari_console-0.1.4-py3-none-any.whl  napari_micromanager-0.1.3-py3-none-any.whl  napari_plugin_engine-0.2.0-py3-none-any.whl  napari_svg-0.2.1-py3-none-any.whl  npe2-0.7.9-py3-none-any.whl  numcodecs-0.16.3-cp312-cp312-win_amd64.whl  numpydoc-1.9.0-py3-none-any.whl  ome_types-0.6.2-py3-none-any.whl  psygnal-0.15.0-cp312-cp312-win_amd64.whl  pyconify-0.2.1-py3-none-any.whl  pydantic_compat-0.1.2-py3-none-any.whl  pydantic_core-2.41.4-cp312-cp312-win_amd64.whl  pymmcore-11.10.0.74.0-cp312-cp312-win_amd64.whl  pymmcore_plus-0.16.0-py3-none-any.whl  pymmcore_widgets-0.10.1-py3-none-any.whl  qtconsole-5.7.0-py3-none-any.whl  rpds_py-0.27.1-cp312-cp312-win_amd64.whl  (+5 more)
(+1 files in other folders)
